# t9s

./: README.md  pyproject.toml
t9s/: k8s.py  main.py
t9s/modules/kubernetes/: commons.py  k8s.py  objects.py
t9s/modules/playground/: logv.py
t9s/modules/utils/: enums.py  sh.py
t9s/modules/widgets/: explorer.py  footer.py  header.py  info.py  log_viewer.py  viewer.py
